--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="header">
-        <div class="header-logo"><a href="/Users/yusukesuzuki/Desktop/レッスン/test/profile/profile.html"><img src="/Users/yusukesuzuki/Desktop/レッスン/test/profile/POPEYE.jpeg"></a></div>
+        <div class="header-logo"><a href="/Users/yusukesuzuki/Desktop/レッスン/test/profile/profile.html"><img src="https://github.com/kunsuzuki/profie/blob/main/POPEYE.jpeg?raw=true"></a></div>
           <div class="header-rist" >
             <ul class="header-contents">
                 <li><a href="/Users/yusukesuzuki/Desktop/レッスン/test/profile/profile.story.html">story</a></li>
